unpackaged/main/default/objects/Tech_Spec__c/Tech_Spec__c.object-meta.xml
<CustomObject>
    <label>Tech Spec</label>
    <nameField>
        <label>Tech Spec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>