unpackaged/main/default/objects/Tech_Spec__c/fields/Confluence_Link__c.field-meta.xml
<CustomField>
    <fullName>Confluence_Link__c</fullName>
    <label>Confluence Link</label>
    <type>Url</type>
</CustomField>