unpackaged/main/default/objects/Tech_Spec__c/fields/Deployment_Date_Actual__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date_Actual__c</fullName>
    <label>Deployment Date Actual</label>
    <type>Date</type>
</CustomField>