unpackaged/main/default/objects/Tech_Spec__c/fields/Deployment_Date_Est__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date_Est__c</fullName>
    <label>Deployment Date Est.</label>
    <type>Date</type>
</CustomField>