unpackaged/main/default/objects/Tech_Spec__c/fields/Solution_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Delivery_Date__c</fullName>
    <label>Solution Delivery Date</label>
    <type>Date</type>
</CustomField>