unpackaged/main/default/objects/Tech_Spec__c/fields/Tax_Free_System__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_System__c</fullName>
    <label>Tax Free System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DIVA Spain</fullName>
            </value>
            <value>
                <fullName>e-Tax Free Portugal</fullName>
            </value>
            <value>
                <fullName>OTELLO Italy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>