unpackaged/main/default/objects/Tech_Spec__c/fields/X3rd_Party_Dev_Cost_Est__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Dev_Cost_Est__c</fullName>
    <label>3rd Party Dev Cost Est</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>