unpackaged/main/default/objects/Tech_Spec__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tax_Free_System__c</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>